# cpp-russia-2017-cmake

./: .gitignore  readme.md
basic/: CMakeLists.txt  main.cpp
basic/lib/: CMakeLists.txt
basic/lib/src/: lib.cpp
commands/: CMakeLists.txt
file_glob/: CMakeLists.txt  file.cpp  main.cpp
findpkg/: CMakeLists.txt  main.cpp
findpkg/cmake/modules/: FindLibXML++.cmake  LibFindMacros.cmake
findpkg2/: CMakeLists.txt  main.cpp  test.cpp  widget.cpp  widget.h
genexpr/: CMakeLists.txt
importexport/: CMakeLists.txt  main.cpp
importexport/coollib/: CMakeLists.txt
importexport/coollib/include/coollib/: coollib.h
importexport/coollib/src/: coollib.cpp
vars/: CMakeLists.txt
